--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,6 +15,8 @@ jobs:
           distribution: 'temurin'
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+      - name: Run tests
+        run: ./gradlew test
       - name: Execute Gradle build
         run: ./gradlew jar
       - name: Release
