--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-		classpath group: 'de.interactive_instruments.bda', name: 'etf-bda', version: '[2.0.17,2.0.99]'
+		classpath group: 'de.interactive_instruments.bda', name: 'etf-bda', version: '[2.0.31,2.0.99]'
     }
     dependencies {
         ant.unjar src: configurations.classpath.files.find {it.path.contains('etf')}, dest: 'build/gradle'
@@ -52,7 +52,7 @@ configurations {
 }
 
 dependencies {
-	compileOnly group: 'de.interactive_instruments', name: 'ii-commons-util', version: '4.0.0' + project.snapshotSuffix
+	compileOnly group: 'de.interactive_instruments', name: 'ii-commons-util', version: '4.0.1' + project.snapshotSuffix
     compileOnly group: 'de.interactive_instruments.etf', name: 'etf-core', version:'2.1.0'+project.snapshotSuffix
     compileOnly group: 'de.interactive_instruments.etf', name: 'etf-spi', version:'2.1.0'+project.snapshotSuffix
 	api group: 'org.slf4j', name: 'slf4j-api', version: etf_slf4jApiVersion
@@ -61,9 +61,11 @@ dependencies {
 	compile group: 'org.jsoup', name: 'jsoup', version: '1.14.2'
 
 	integrationTest group: 'org.slf4j', name: 'slf4j-simple', version: etf_slf4jApiVersion
+	integrationTest group: 'de.interactive_instruments', name: 'ii-commons-util', version: '4.0.1' + project.snapshotSuffix
 	integrationTest group: 'de.interactive_instruments.etf', name: 'etf-spi', version:'2.1.0'+project.snapshotSuffix
-	integrationTest group: 'de.interactive_instruments.etf', name: 'etf-stdtot', version: '1.0.1' + project.snapshotSuffix
-	integrationTest group: 'de.interactive_instruments.etf.test', name: 'etf-unittest', version: '1.1.1' + project.snapshotSuffix
+	integrationTest group: 'de.interactive_instruments.etf', name: 'etf-core', version:'2.1.0'+project.snapshotSuffix
+	integrationTest group: 'de.interactive_instruments.etf', name: 'etf-stdtot', version: '2.1.0' + project.snapshotSuffix
+	integrationTest group: 'de.interactive_instruments.etf.test', name: 'etf-unittest', version: '2.1.0' + project.snapshotSuffix
 	integrationTest group: 'org.junit.jupiter', name: 'junit-jupiter', version: etf_junitTestVersion
 }
 
