--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,14 +4,15 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '8'
           distribution: 'temurin'
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
